[package]
name = "bundlr-contracts-bundlers"
version = "0.1.0"
authors = ["miko.nieminen@iki.fi"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bundlr-contracts-shared = { path = "../shared" }
js-sys = { version = "0.3.56", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "= 0.2.79", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.29", optional = true }

[features]
default = ["js-runtime"]
js-runtime = ["js-sys", "wasm-bindgen", "wasm-bindgen-futures", "bundlr-contracts-shared/js-runtime"]

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false
