[package]
name = "bundlr-contracts-token"
version = "0.1.0"
authors = ["miko.nieminen@iki.fi"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bundlr-contracts-shared = { path = "../shared" }
js-sys = "0.3.56"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "= 0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.29" }

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false
