[package]
name = "bundlr-contracts-validators"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bundlr-contracts-shared = { path = "../shared" }
data-encoding = { version = "2.3.2" }
js-sys = "0.3.56"
rand_xoshiro = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
wasm-bindgen = { version = "= 0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.29" }

[dev-dependencies]
futures = "0.3.21"

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false
