[package]
name = "bundlr-contracts-validators"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bundlr-contracts-shared = { path = "../shared" }
data-encoding = { version = "2.3.2" }
js-sys = { version = "0.3.56", optional = true }
rand_xoshiro = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
wasm-bindgen = { version = "= 0.2.79", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.29", optional = true }

[features]
default = ["js-runtime"]
js-runtime = ["js-sys", "wasm-bindgen", "wasm-bindgen-futures", "bundlr-contracts-shared/js-runtime"]

[dev-dependencies]
futures = "0.3.21"

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false
