[package]
name = "token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0.132", features = [ "derive" ] }
serde_json = "1.0.73"
three_em = { path = "../../3em/helpers/rust" }
log = "0.4.6"
wasm-logger = "0.2.0"